--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Tanuja Gupta",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "jade": "^1.11.0",
     "twitter": "^1.7.1"
